[tool.poetry]
name = "flask-blog"
version = "0.1.0"
description = "Simple Flask blog app based on Corey Schafer's tutorial"
authors = ["Julia Didenko <iuliia.didenko@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_blog"}]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.2.2"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
Flask = "^2.2.2"
flake8 = "^5.0.4"
bcrypt = "^4.0.1"
flask-sqlalchemy = "^3.0.2"
WTForms = "^3.0.1"
Flask-Login = "^0.6.2"
Pillow = "^9.2.0"
Flask-Mail = "^0.9.1"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry>=1.2.1"]
build-backend = "poetry.core.masonry.api"
