[tool.poetry]
name = "flask-blog"
version = "0.1.0"
description = "Simple Flask blog app based on Corey Schafer's tutorial"
authors = ["Julia Didenko <iuliia.didenko@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_blog"}]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.2.2"
gunicorn = "^20.1.0"
bcrypt = "^4.0.1"
flask-sqlalchemy = "^3.0.2"
wtforms = "^3.0.1"
flask-login = "^0.6.2"
pillow = "^9.3.0"
flask-mail = "^0.9.1"
flask-bcrypt = "^1.0.1"
flask-wtf = "^1.0.1"
email-validator = "^1.3.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.1.0a6"]
build-backend = "poetry.core.masonry.api"
